public/css/styles.css
/* ... */
@media (min-width: 768px) {
    .home-forth {
        flex-direction: row;
    }

    .word-kenapa-pilih,
    .card-kenapa-pilih {
        width: 50%;
    }

    .word-kenapa-pilih h1,
    .word-kenapa-pilih p {
        text-align: left;
        margin: 0 0 1rem 0;
    }

    .word-kenapa-pilih h1 {
        font-size: 30px;
    }

    .word-kenapa-pilih p {
        font-size: 14px;
    }

    .card-kenapa-pilih {
        flex-direction: row;
        flex-wrap: wrap;
        align-content: center;
    }

    .kemudahan-kenapa-pilih,
    .kecepatan-kenapa-pilih,
    .fleksibilitas-kenapa-pilih {
        width: 45%;
        height: 135px;
    }

    .kemudahan-word p {
        font-size: 14px;
    }

    .back {
        font-size: .6rem;
    }
}

@media (min-width: 992px) {
    .word-kenapa-pilih h1 {
        font-size: 42.35px;
    }

    .word-kenapa-pilih p {
        font-size: 1rem;
    }

    .kemudahan-kenapa-pilih,
    .kecepatan-kenapa-pilih,
    .fleksibilitas-kenapa-pilih {
        width: 50%;
        height: unset;
        margin: auto !important;
    }

    .kemudahan-kenapa-pilih .front,
    .kecepatan-kenapa-pilih .front,
    .fleksibilitas-kenapa-pilih .front,
    .kemudahan-kenapa-pilih .back,
    .kecepatan-kenapa-pilih .back,
    .fleksibilitas-kenapa-pilih .back {
        width: 180px !important;
        height: 165px !important;
    }

    .kemudahan-word p {
        font-size: 16px;
    }

    .back {
        font-size: .7rem;
    }
}

@media (min-width: 1200px) {
    .word-kenapa-pilih h1 {
        width: 55%;
    }

    .kemudahan-kenapa-pilih .front,
    .kecepatan-kenapa-pilih .front,
    .fleksibilitas-kenapa-pilih .front,
    .kemudahan-kenapa-pilih .back,
    .kecepatan-kenapa-pilih .back,
    .fleksibilitas-kenapa-pilih .back {
        width: 240px !important;
        height: 210px !important;
    }

    .kemudahan-word p {
        font-size: 20px;
    }

    .back {
        font-size: .9rem;
    }
}

/* section 5 home page */
.home-fifth {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-top: 10vh;
    text-align: center;
}

.share-love-word h1 {
    font-size: 22px;
    color: #2F2D65;
}

.share-love-word p {
    font-size: 12px;
    color: #5D5D83;
}

.share-love-word {
    margin: -2rem 0;
}

.share-love-img-left {
    margin-right: auto;
}

.share-love-img-right {
    margin-left: auto;
}

.share-love-img-left img,
.share-love-img-right img {
    width: 130px;
}

.share-love-img-left img {
    margin-left: -3rem;
    margin-right: auto;
}

.share-love-img-right img {
    margin-left: auto;
    margin-right: -3rem;
}

@media (min-width: 768px) {
    .home-fifth {
        flex-wrap: nowrap;
    }

    .share-love-word h1 {
        font-size: 32px;
    }

    .share-love-word p {
        font-size: 14px;
    }

    .share-love-img-left img,
    .share-love-img-right img {
        width: 220px;
    }
}

@media (min-width: 992px) {
    .share-love-word h1 {
        font-size: 3rem;
    }

    .share-love-word p {
        font-size: 1rem;
    }

    .share-love-img-left img,
    .share-love-img-right img {
        width: 280px;
    }
}

/* footer */
.footer {
    width: 100%;
    height: 15vh;
    background-color: #2F2D65;
    color: #FFFFFF;
    padding-top: 5%;
    padding-left: 2%;
    padding-right: 2%;
}

.footer-content {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
}

.footer-content ul {
    list-style-type: none;
}

.footer-content p {
    font-weight: bold;
    font-size: .7rem;
}

.footer-content li {
    font-size: .6rem;
}

.footer-content img {
    width: 100px;
}

/* scroll to top btn */
.scroll-top {
    transition: background-color .3s, opacity .5s, visibility .5s;
    opacity: 0;
    visibility: hidden;
    width: 50px;
    height: 50px;
    margin-bottom: 30px;
    margin-right: 30px;
    color: #000000;
    font-size: 2rem;
    border-radius: 4px;
    background-color: #ffffff;
    border: none;
}

.scroll-top:hover {
    cursor: pointer;
    background-color: #d8c5c5;
}

.scroll-top.show {
    opacity: 1;
    visibility: visible;
}

.scroll-top.dark {
    background-color: #2B2844;
    color: #ffffff;
}

.scroll-top.dark:hover {
    background-color: #615d80;
}

/* dashboard section */

/* navbar */
#side-nav {
    border-bottom: 1px solid rgba(0,0,0,.2);
}

.navbar-dashboard span {
    color: #2F2D65;
}

.dashboard-content {
    width: 100%;
    /* height: 100%; */
    background-color: #9EEDE5;
    border-top-left-radius: 44px;
    border-top-right-radius: 44px;
    padding: 3vw;
}

.navbar-dashboard ul {
    list-style-type: none;
}

#navbar-hamburger {
    position: fixed;
    top: 50px;
}

#navbar-responsive {
    width: 55px;
    transition: all 0.5s ease;
    padding: .3rem;
    visibility: hidden;
}

#navbar-responsive.active {
    width: 223px;
}

#navbar-responsive.static {
    width: 223px;
}

/* SideNavBar */
.sidebar {
    position: fixed;
    bottom: 0;
    z-index: 1050;
    display: flex;
    flex-direction: column;
    max-width: 100%;
    background-color: #fff;
    background-clip: padding-box;
    outline: 0;
    transition: transform .3s ease-in-out;
}

.sidebar-start {
    top: 0;
    left: 0;
    width: 400px;
    border-right: 1px solid rgba(0,0,0,.2);
}

.sidebar-header {
    margin: .5rem 0;
}

.sidebar-logo {
    width: 0;
    visibility: hidden;
}

#navbar-responsive.active .sidebar-logo {
    width: 100%;
    visibility: visible;
    transition: all 0.5s ease;
}

.sidebar-logo a img {
    width: 100px;
}

.static-sidebar-logo a img {
    width: 160px;
}

.sidebar-hamburger {
    width: 100%;
    font-size: 1.5rem;
    margin: auto 0;
    color: #2F2D65;
}

#navbar-responsive.active .sidebar-hamburger {
    width: 30%;
}

#navbar-responsive ul {
    margin-top: 20px;
    padding: 0;
}

#navbar-responsive ul li {
    position: relative;
    height: 45px;
    width: 100%;
    margin: .5rem 0;
    list-style: none;
    line-height: 45px;
}
/* ... */

